# midnight-node

./: .ai  .bazelignore  .bazelrc  .earthlyignore  .envrc  .envrc.local.example  .gitignore  .gitmodules  .grype.yaml  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  COMPACTC_VERSION  Cargo.toml  Dockerfile.split-prove  Earthfile  GLOSSARY.md  MODULE.bazel  README.md  defs.bzl  flake.nix  justfile  llms.txt  midnight-node.code-workspace  partnerchains-dev.sh  preprod-utxo-ordering.json  preview-utxo-ordering.json  qanet-utxo-ordering.json  rust-toolchain.toml  rustfmt.toml  summary_raw  test-ghcr-midnightntwrk-push.yml.bak
ledger/: BUILD.bazel  Cargo.toml  README.md  build.rs
ledger/helpers/: BUILD.bazel  Cargo.toml  README.md
ledger/res/: utxo-ordering-override-preprod.json  utxo-ordering-override-preview.json  utxo-ordering-override-qanet.json
ledger/src/: aux_store_db.rs  lib.rs  native_api.rs  storage.rs  utils.rs
metadata/: BUILD.bazel  Cargo.toml  README.md
metadata/src/: lib.rs
metadata/static/: midnight_metadata.scale  midnight_metadata_0.18.0.scale  midnight_metadata_0.18.1.scale  midnight_metadata_0.19.0-rc.1.scale  midnight_metadata_0.22.0.scale  midnight_metadata_1.0.0.scale
node/: BUILD.bazel  Cargo.toml  README.md
node/src/: cli.rs  cnight_genesis.rs  command.rs  extensions.rs  federated_authority_genesis.rs  filtering_pool.rs  inherent_data.rs  ledger_backend.rs  ledger_log_pipeline.rs  lib.rs  main.rs  main_chain_follower.rs  midnight_pre_verifier.rs  otel_trace_handler.rs  payload.rs  peer_info_rpc.rs  permissioned_candidates_genesis.rs  rpc.rs  service.rs  subscription_bounds.rs  tracing_block_import.rs
node/tests/: yamux_vulnerability.rs
pallets/c2m-bridge/: Cargo.toml
pallets/cnight-observation/: BUILD.bazel  Cargo.toml  README.md
pallets/collective-proposer-cancel/: Cargo.toml
pallets/consensus-config/: Cargo.toml
pallets/federated-authority/: BUILD.bazel  Cargo.toml  README.md
pallets/federated-authority-observation/: BUILD.bazel  Cargo.toml  README.md
pallets/midnight/: BUILD.bazel  Cargo.toml  README.md
pallets/midnight-system/: BUILD.bazel  Cargo.toml  README.md
pallets/system-parameters/: BUILD.bazel  Cargo.toml  README.md
pallets/throttle/: BUILD.bazel
pallets/version/: BUILD.bazel  README.md
partner-chains/: Cargo.toml  changelog.md
partner-chains/e2e-tests/: requirements.txt
primitives/beefy/: BUILD.bazel  Cargo.toml
primitives/cnight-observation/: BUILD.bazel  README.md
primitives/federated-authority-observation/: BUILD.bazel  Cargo.toml  README.md
primitives/ics-observation/: BUILD.bazel
primitives/ledger/: BUILD.bazel  README.md
relay/: BUILD.bazel  Cargo.toml  README.md
relay/src/: authorities.rs  beefy_keys.rs  cardano_encoding.rs  error.rs  helper.rs  justification.rs  main.rs  relayer.rs
relay/test-data/: beefy-keys.json
res/: BUILD.bazel  Cargo.toml  README.md  utxo-ordering-override-preprod.json
res/cfg/: ddosnet.toml  default.toml  dev.toml  devnet.toml  govnet.toml  guardnet.toml  mainnet.toml  node-dev-01.toml  perfnet-mainnet.toml  perfnet.toml  preprod.toml  preview.toml  qanet.toml
res/ddosnet/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json
res/dev/: c2m-bridge-config.json  federated-authority-config.json
res/devnet/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  pc-chain-config.json  permissioned-candidates-addresses.json
res/genesis/: genesis_block_ddosnet.mn  genesis_block_devnet.mn  genesis_block_govnet.mn  genesis_block_guardnet.mn  genesis_block_mainnet.mn  genesis_block_node-dev-01.mn  genesis_block_perfnet.mn  genesis_block_preprod.mn  genesis_block_preview.mn  genesis_block_qanet.mn  genesis_block_undeployed.mn  genesis_state_ddosnet.mn  genesis_state_govnet.mn  genesis_state_guardnet.mn  genesis_state_mainnet.mn  genesis_state_node-dev-01.mn  genesis_state_perfnet.mn  genesis_state_preprod.mn  genesis_state_preview.mn  genesis_state_qanet.mn  genesis_state_undeployed.mn
res/govnet/: c2m-bridge-config.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-addresses.json  cnight-config.json  federated-authority-addresses.json  pc-chain-config.json  permissioned-candidates-addresses.json
res/guardnet/: c2m-bridge-config.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json
res/mainnet/: cardano-tip.json  chain-spec-abridged.json  chain-spec-hash.json  chain-spec-raw.json  chain-spec.json  cnight-config.json  federated-authority-config.json  permissioned-candidates-config.json  reserve-addresses.json  srtool-digest.json
res/mock-bridge-data/: default-registrations.json  qanet-mock.json  testnet-02-mock.json
res/node-dev-01/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-addresses.json  cnight-config.json
res/perfnet/: c2m-bridge-config.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  ics-config.json  pc-chain-config.json  permissioned-candidates-config.json  registered-candidates-addresses.json
res/perfnet-mainnet/: authorization-addresses.json  bootnodes-config.json  cardano-tip.json  federated-authority-addresses.json  federated-authority-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json
res/preprod/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-addresses.json  federated-authority-config.json  ics-config.json  pc-chain-config.json  reserve-addresses.json  reserve-config.json
res/preview/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-addresses.json  ics-config.json  permissioned-candidates-config.json  reserve-addresses.json  reserve-config.json
res/qanet/: cardano-tip.json  chain-spec-abridged.json  chain-spec-hash.json  chain-spec-perf.json  chain-spec-raw.json  chain-spec.json  cnight-config.json  ics-config.json  (+5 more)
runtime/: BUILD.bazel  Cargo.toml  README.md  build.rs  wasm_transition.bzl
toolchains/: BUILD.bazel  noop_cc.sh  wasm32_ar.sh  wasm32_cc.sh  wasm_cc.bzl
wasm-deps/: Cargo.toml
(+617 files in other folders)
