load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:defs.bzl", "native_only_crates", "wasm_aware_crates", "wasm_aware_features", "wasm_rustc_flags")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-node-ledger",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml", "//:Cargo.toml"],
    crate_features = wasm_aware_features([
        "std",
        "test-utils",
    ]),
    edition = "2024",
    rustc_flags = wasm_rustc_flags(),
    aliases = select({
        "//:wasm32": {},
        "//conditions:default": {
            # L7 aliases (non-colliding only)
            "@crates//:midnight-base-crypto-1.0.0": "base_crypto",
            "@crates//:midnight-ledger-7.0.3": "mn_ledger",
            "@crates//:midnight-storage-1.1.1": "ledger_storage",
            "@crates//:midnight-onchain-runtime-2.0.1": "onchain_runtime",
            "@crates//:midnight-zswap-7.0.3": "zswap",
            "@crates//:substrate-prometheus-endpoint-0.17.7": "prometheus_endpoint",
            # L8 aliases (only for deps that differ from L7)
            "@crates//:onchain_runtime_ledger_8": "onchain_runtime_ledger_8",
            "@crates//:ledger_storage_ledger_8": "ledger_storage_ledger_8",
        },
    }),
    deps = wasm_aware_crates([
        # no_std core deps (unconditional in Cargo.toml)
        "frame-support",
        "parity-scale-codec",
        "scale-info",
        "sp-externalities",
        "sp-runtime",
        "sp-runtime-interface",
        "sp-tracing",
    ]) + native_only_crates([
        # std-only deps (optional = true, enabled by std feature)
        "hex",
        "log",
        "serde",
        # midnight-primitives-ledger is optional, behind std
        # L7 midnight deps (colliding use bridges from helpers)
        "midnight-base-crypto-1.0.0",
        "midnight-ledger-7.0.3",
        "midnight-onchain-runtime-2.0.1",
        "midnight-serialize",
        "midnight-storage-1.1.1",
        "midnight-storage-core",
        "midnight-zswap-7.0.3",
        # L8 midnight deps (only those that differ from L7)
        "onchain_runtime_ledger_8",
        "ledger_storage_ledger_8",
        # Host-only substrate/utility
        "substrate-prometheus-endpoint-0.17.7",
        "lazy_static",
        "moka",
        "serde_json",
        "sha2",
        "toml",
    ]) + select({
        # Helpers + bridge deps only needed in native builds
        "//:wasm32": [],
        "//conditions:default": [
            "//primitives/ledger:midnight-primitives-ledger",
            "//ledger/helpers:midnight-node-ledger-helpers",
            "//ledger/helpers:_coin_structure_bridge",
            "//ledger/helpers:_transient_crypto_bridge",
            "//ledger/helpers:_mn_ledger_8_bridge",
            "//ledger/helpers:_zswap_ledger_8_bridge",
        ],
    }),
    proc_macro_deps = [
        # scale-info-derive is unconditional (proc macros run on host)
        "@crates//:scale-info-derive",
    ] + select({
        # derive-where is optional, behind std feature in Cargo.toml
        "//:wasm32": [],
        "//conditions:default": ["@crates//:derive-where"],
    }),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "midnight-node-ledger-test",
    size = "small",
    crate = ":midnight-node-ledger",
    compile_data = ["Cargo.toml", "//:Cargo.toml"] + glob(["test-data/**"]),
    crate_features = ["std", "test-utils"],
    edition = "2024",
    aliases = {
        "@crates//:midnight-base-crypto-1.0.0": "base_crypto",
        "@crates//:midnight-ledger-7.0.3": "mn_ledger",
        "@crates//:midnight-storage-1.1.1": "ledger_storage",
        "@crates//:midnight-onchain-runtime-2.0.1": "onchain_runtime",
        "@crates//:midnight-zswap-7.0.3": "zswap",
        "@crates//:onchain_runtime_ledger_8": "onchain_runtime_ledger_8",
        "@crates//:ledger_storage_ledger_8": "ledger_storage_ledger_8",
        "@crates//:substrate-prometheus-endpoint-0.17.7": "prometheus_endpoint",
    },
    deps = [
        "//res:midnight-node-res-test",
    ],
    env = {
        "HOME": "/tmp",
    },
    proc_macro_deps = [
        "@crates//:scale-info-derive",
        "@crates//:derive-where",
    ],
)
