load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2024",
    deps = [
        "@crates//:substrate-build-script-utils",
    ],
)

_NODE_ALIASES = {
    "@crates//:substrate-prometheus-endpoint-0.17.7": "prometheus_endpoint",
}

_NODE_DEPS = [
    ":build_script",
    # Local deps
    "//ledger:midnight-node-ledger",
    "//ledger/helpers:midnight-node-ledger-helpers",
    "//pallets/cnight-observation:pallet-cnight-observation",
    "//pallets/cnight-observation/mock:pallet-cnight-observation-mock",
    "//pallets/midnight:pallet-midnight",
    "//pallets/midnight/rpc:pallet-midnight-rpc",
    "//pallets/system-parameters:pallet-system-parameters",
    "//pallets/system-parameters/rpc:pallet-system-parameters-rpc",
    "//pallets/throttle:pallet-throttle",
    "//primitives/beefy:midnight-primitives-beefy",
    "//primitives/cnight-observation:midnight-primitives-cnight-observation",
    "//primitives/federated-authority-observation:midnight-primitives-federated-authority-observation",
    "//primitives/ics-observation:midnight-primitives-ics-observation",
    "//primitives/ledger:midnight-primitives-ledger",
    "//primitives/mainchain-follower:midnight-primitives-mainchain-follower",
    "//primitives/midnight:midnight-primitives",
    "//primitives/reserve-observation:midnight-primitives-reserve-observation",
    "//primitives/system-parameters:midnight-primitives-system-parameters",
    "//res:midnight-node-res",
    "//runtime:midnight-node-runtime",
    "//util/documented:documented",
    # External deps
    "@crates//:authority-selection-inherents",
    "@crates//:blake2b_simd",
    "@crates//:clap",
    "@crates//:config",
    "@crates//:frame-support",
    "@crates//:frame-system",
    "@crates//:futures",
    "@crates//:hex",
    "@crates//:hostname",
    "@crates//:jsonrpsee",
    "@crates//:local-ip-address",
    "@crates//:log",
    "@crates//:mmr-gadget",
    "@crates//:mmr-rpc",
    "@crates//:pallet-session-validator-management-rpc",
    "@crates//:pallet-sidechain-rpc",
    "@crates//:parity-scale-codec",
    "@crates//:partner-chains-cli",
    "@crates//:partner-chains-db-sync-data-sources",
    "@crates//:partner-chains-mock-data-sources",
    "@crates//:partner-chains-node-commands",
    "@crates//:prost",
    "@crates//:reqwest",
    "@crates//:sc-basic-authorship",
    "@crates//:sc-chain-spec",
    "@crates//:sc-cli",
    "@crates//:sc-client-api",
    "@crates//:sc-consensus",
    "@crates//:sc-consensus-aura",
    "@crates//:sc-consensus-beefy",
    "@crates//:sc-consensus-beefy-rpc",
    "@crates//:sc-consensus-grandpa",
    "@crates//:sc-consensus-grandpa-rpc",
    "@crates//:sc-consensus-slots",
    "@crates//:sc-executor",
    "@crates//:sc-keystore",
    "@crates//:sc-network",
    "@crates//:sc-offchain",
    "@crates//:sc-partner-chains-consensus-aura",
    "@crates//:sc-rpc",
    "@crates//:sc-rpc-api",
    "@crates//:sc-service",
    "@crates//:sc-storage-monitor",
    "@crates//:sc-telemetry",
    "@crates//:sc-transaction-pool",
    "@crates//:sc-transaction-pool-api",
    "@crates//:sc-utils",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:serde_valid",
    "@crates//:shell-words",
    "@crates//:sidechain-domain",
    "@crates//:sidechain-mc-hash",
    "@crates//:sidechain-slots",
    "@crates//:snap",
    "@crates//:sp-api",
    "@crates//:sp-block-builder",
    "@crates//:sp-blockchain",
    "@crates//:sp-consensus-aura",
    "@crates//:sp-consensus-beefy",
    "@crates//:sp-consensus-grandpa",
    "@crates//:sp-core",
    "@crates//:sp-externalities",
    "@crates//:sp-inherents",
    "@crates//:sp-io",
    "@crates//:sp-keyring",
    "@crates//:sp-keystore",
    "@crates//:sp-mmr-primitives",
    "@crates//:sp-partner-chains-bridge",
    "@crates//:sp-partner-chains-consensus-aura",
    "@crates//:sp-runtime",
    "@crates//:sp-session-validator-management",
    "@crates//:sp-session-validator-management-query",
    "@crates//:sp-sidechain",
    "@crates//:sp-state-machine",
    "@crates//:sp-timestamp",
    "@crates//:sp-version",
    "@crates//:sqlx",
    "@crates//:substrate-frame-rpc-system",
    "@crates//:substrate-prometheus-endpoint-0.17.7",
    "@crates//:thiserror",
    "@crates//:time-source",
    "@crates//:tokio",
]

_NODE_PROC_MACRO_DEPS = [
    "@crates//:async-trait",
    "@crates//:derive-new",
]

# Library crate — main.rs imports midnight_node::command
rust_library(
    name = "midnight-node-lib",
    crate_name = "midnight_node",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    edition = "2024",
    aliases = _NODE_ALIASES,
    compile_data = ["Cargo.toml"],
    deps = _NODE_DEPS,
    proc_macro_deps = _NODE_PROC_MACRO_DEPS,
    visibility = ["//visibility:public"],
)

# Binary crate
rust_binary(
    name = "midnight-node",
    srcs = ["src/main.rs"],
    edition = "2024",
    aliases = _NODE_ALIASES,
    compile_data = ["Cargo.toml"],
    deps = [":midnight-node-lib"] + _NODE_DEPS,
    proc_macro_deps = _NODE_PROC_MACRO_DEPS,
)

rust_test(
    name = "midnight-node-test",
    size = "small",
    crate = ":midnight-node-lib",
    aliases = _NODE_ALIASES,
    compile_data = ["Cargo.toml"],
    data = [
        "//res:cfg_files",
        "//res:test_data_files",
    ],
    edition = "2024",
    deps = [
        "@crates//:tempfile",
    ],
    proc_macro_deps = _NODE_PROC_MACRO_DEPS,
)
