[workspace]
members = [
	"demo/node",
	"demo/runtime",
	"toolkit/cli/commands",
	"toolkit/cli/node-commands",
	"toolkit/smart-contracts/commands",
	"substrate-extensions/aura/consensus",
	"toolkit/block-production-log/pallet",
	"substrate-extensions/partner-chains-session",
	"toolkit/committee-selection/pallet",
	"toolkit/committee-selection/rpc",
	"substrate-extensions/aura/primitives",
	"toolkit/block-production-log/primitives",
	"toolkit/sidechain/domain",
	"toolkit/committee-selection/selection",
	"toolkit/committee-selection/authority-selection-inherents",
	"toolkit/data-sources/cli",
	"toolkit/data-sources/db-sync",
	"toolkit/data-sources/mock",
	"toolkit/utils/byte-string-derivation",
	"toolkit/utils/plutus",
	"toolkit/utils/plutus/plutus-datum-derive",
	"toolkit/utils/ogmios-client",
	"toolkit/utils/time-source",
	"toolkit/sidechain/sidechain-mc-hash",
	"toolkit/sidechain/pallet",
	"toolkit/sidechain/rpc",
	"toolkit/sidechain/sidechain-block-search",
	"toolkit/sidechain/sidechain-slots",
	"toolkit/sidechain/primitives",
	"toolkit/committee-selection/primitives",
	"toolkit/committee-selection/query",
	"toolkit/partner-chains-cli",
	"toolkit/smart-contracts/offchain",
	"toolkit/smart-contracts/plutus-data",
	"toolkit/address-associations/pallet",
	"toolkit/block-participation/pallet",
	"toolkit/block-participation/primitives",
	"toolkit/block-producer-fees/pallet",
	"toolkit/block-producer-fees/primitives",
	"toolkit/block-producer-fees/rpc",
	"toolkit/block-producer-metadata/pallet",
	"toolkit/block-producer-metadata/primitives",
	"toolkit/block-producer-metadata/rpc",
	"toolkit/utils/db-sync-sqlx",
	"toolkit/governed-map/primitives",
	"toolkit/governed-map/pallet",
	"toolkit/committee-selection/selection-simulator",
	"toolkit/bridge/pallet",
	"toolkit/bridge/primitives",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
] }
