load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files(["Cargo.toml"])

_RELAY_DEPS = [
    "//metadata:midnight-node-metadata",
    "//primitives/beefy:midnight-primitives-beefy",
    "@crates//:clap",
    "@crates//:env_logger",
    "@crates//:log",
    "@crates//:mmr-rpc",
    "@crates//:pallas",
    "@crates//:parity-scale-codec",
    "@crates//:rs_merkle",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:sp-consensus-beefy",
    "@crates//:sp-core",
    "@crates//:subxt",
    "@crates//:thiserror",
    "@crates//:tokio",
]

rust_binary(
    name = "midnight-beefy-relay",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    deps = _RELAY_DEPS,
    visibility = ["//visibility:public"],
)

rust_test(
    name = "midnight-beefy-relay-test",
    size = "small",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "midnight_beefy_relay",
    crate_root = "src/main.rs",
    data = glob(["test-data/**"]),
    edition = "2024",
    env = {
        "CARGO_MANIFEST_DIR": "relay",
    },
    rustc_env = {
        "CARGO_MANIFEST_DIR": "relay",
    },
    deps = _RELAY_DEPS,
)
