load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2024",
    data = glob(["cfg/**"]),
    deps = [
        "@crates//:walkdir",
    ],
)

rust_library(
    name = "midnight-node-res",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["cfg/**"]) + glob(["dev/**"]) + glob(["genesis/**"]),
    crate_features = [
        "std",
        "chain-spec",
    ],
    edition = "2024",
    deps = [
        ":build_script",
        "//pallets/cnight-observation:pallet-cnight-observation",
        "//primitives/federated-authority-observation:midnight-primitives-federated-authority-observation",
        "//primitives/ics-observation:midnight-primitives-ics-observation",
        "//primitives/reserve-observation:midnight-primitives-reserve-observation",
        "//primitives/system-parameters:midnight-primitives-system-parameters",
        "@crates//:hex-literal",
        "@crates//:midnight-serialize",
        "@crates//:sc-service",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sidechain-domain",
        "@crates//:sp-core",
        "@crates//:sp-session-validator-management",
    ],
    visibility = ["//visibility:public"],
)
