load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2024",
    # substrate_wasm_builder compiles the runtime to wasm32v1-none
    build_script_env = {
        "SKIP_WASM_BUILD": "0",
    },
    data = glob(["src/**/*.rs"]),
    deps = [
        "@crates//:frame-storage-access-test-runtime",
        "@crates//:substrate-wasm-builder",
    ],
)

rust_library(
    name = "midnight-node-runtime",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    deps = [
        ":build_script",
        # Local deps
        "//ledger:midnight-node-ledger",
        "//pallets/cnight-observation:pallet-cnight-observation",
        "//pallets/federated-authority:pallet-federated-authority",
        "//pallets/federated-authority-observation:pallet-federated-authority-observation",
        "//pallets/midnight:pallet-midnight",
        "//pallets/midnight-system:pallet-midnight-system",
        "//pallets/system-parameters:pallet-system-parameters",
        "//pallets/throttle:pallet-throttle",
        "//pallets/version:pallet-version",
        "//primitives/beefy:midnight-primitives-beefy",
        "//primitives/cnight-observation:midnight-primitives-cnight-observation",
        "//primitives/federated-authority-observation:midnight-primitives-federated-authority-observation",
        "//primitives/midnight:midnight-primitives",
        "//runtime/common:runtime-common",
        # External deps
        "@crates//:authority-selection-inherents",
        "@crates//:binary-merkle-tree",
        "@crates//:frame-executive",
        "@crates//:frame-support",
        "@crates//:frame-system",
        "@crates//:frame-system-rpc-runtime-api",
        "@crates//:log",
        "@crates//:pallet-aura",
        "@crates//:pallet-beefy",
        "@crates//:pallet-beefy-mmr",
        "@crates//:pallet-collective",
        "@crates//:pallet-grandpa",
        "@crates//:pallet-membership",
        "@crates//:pallet-migrations",
        "@crates//:pallet-mmr",
        "@crates//:pallet-partner-chains-bridge",
        "@crates//:pallet-partner-chains-session",
        "@crates//:pallet-preimage",
        "@crates//:pallet-scheduler",
        "@crates//:pallet-session",
        "@crates//:pallet-session-validator-management",
        "@crates//:pallet-sidechain",
        "@crates//:pallet-timestamp",
        "@crates//:pallet-tx-pause",
        "@crates//:parity-scale-codec",
        "@crates//:scale-info",
        "@crates//:sidechain-domain",
        "@crates//:sidechain-slots",
        "@crates//:sp-api",
        "@crates//:sp-block-builder",
        "@crates//:sp-consensus-aura",
        "@crates//:sp-consensus-beefy",
        "@crates//:sp-consensus-grandpa",
        "@crates//:sp-consensus-slots",
        "@crates//:sp-core",
        "@crates//:sp-genesis-builder",
        "@crates//:sp-inherents",
        "@crates//:sp-offchain",
        "@crates//:sp-partner-chains-bridge",
        "@crates//:sp-runtime",
        "@crates//:sp-session",
        "@crates//:sp-session-validator-management",
        "@crates//:sp-sidechain",
        "@crates//:sp-staking",
        "@crates//:sp-storage",
        "@crates//:sp-transaction-pool",
        "@crates//:sp-version",
    ],
    visibility = ["//visibility:public"],
)
